fix: spacing between sections

--- a/src/components/Sponsors/Sponsors.module.css
+++ b/src/components/Sponsors/Sponsors.module.css
@@ -10,12 +10,8 @@
 	text-align: center;
 }
 
-.sponsors {
-	margin-top: 7.5rem;
-}
-
 .collaborators {
-	margin-bottom: 7.5rem;
+	margin-bottom: 5rem;
 }
 
 .header {
